Fix style in all commands