@@ -1,10 +1,9 @@
-package io.cli.command.impl.pwd;
+package io.cli.command.impl.grep;
 
 import io.cli.command.Command;
 import io.cli.command.CommandFactory;
 import io.cli.parser.token.Token;
 
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 
@@ -13,26 +12,26 @@ import java.util.Optional;
  */
 public class GrepCommandFactory implements CommandFactory {
     /**
-     * Default constructor for PwdCommandFactory.
+     * Default constructor for GrepCommandFactory.
      */
     public GrepCommandFactory() {
     }
 
     private static boolean checkArgs(List<Token> args) {
-        return !args.isEmpty() && "grep".equals(args.get(0).getInput());
+        return !args.isEmpty() && "grep".equals(args.getFirst().getInput());
     }
 
     /**
-     * Creates a new instance of {@link PwdCommand} if the arguments are valid.
+     * Creates a new instance of {@link GrepCommand} if the arguments are valid.
      *
      * @param args The list of tokens representing command-line arguments.
-     * @return An Optional containing a new `PwdCommand` instance if valid, otherwise an empty Optional.
+     * @return An Optional containing a new `GrepCommand` instance if valid, otherwise an empty Optional.
      */
     @Override
     public Optional<Command> newCommand(List<Token> args) {
         if (!checkArgs(args)) {
             return Optional.empty();
         }
-        return Optional.of(new PwdCommand());
+        return Optional.of(new GrepCommand(args));
     }
 }
